The 'print blank' page is built out. Added error messages that show up. Fixed word wrapping with form titles and description that are long. Changed some styles.

--- a/less/plugin.less
+++ b/less/plugin.less
@@ -15,6 +15,10 @@ div#content-main {
       }
     }
 
+    #btnToggleSelection {
+      display: none;
+    }
+
     .row {
       margin-left: 5px;
       margin-right: 5px;
@@ -38,12 +42,22 @@ div#content-main {
 
         .form-name {
           margin-left: 5px;
+          display: inline-block;
+          width: 90%;
+        }
+
+        .form-error {
+          color: #a94442;
         }
 
         &.error {
-          border-color: red;
-          border-top: 2px solid red;
-          border-bottom: 2px solid red;
+          border-color: #a94442;
+          border-top: 2px solid #a94442;
+          border-bottom: 2px solid #a94442;
+
+          .form-error {
+            margin-bottom: 5px;
+          }
         }
       }
     }
@@ -61,4 +75,8 @@ div#content-main {
       }
     }
   }
+}
+
+.icheckbox_square-blue {
+  float: left;
 }
